Mosowicz full functionality implementation